# python-api-for-seetaface-on-linux

./: README.md  seetaface_api.py  seetaface_api.py~  test.py  test.py~
seetaface/FaceAlignment/: CMakeLists.txt  CMakeLists.txt~
seetaface/FaceAlignment/src/: so_api.cpp  so_api.cpp~
seetaface/FaceDetection/: CMakeLists.txt  CMakeLists.txt~  compiling_error.txt
seetaface/FaceDetection/src/: generate_so.cpp~  so_api.cpp
seetaface/FaceIdentification/: CMakeLists.txt  CMakeLists.txt~
seetaface/FaceIdentification/src/: so_api.cpp  so_api.cpp~
